--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   const STATE = (url.searchParams.get("v")||"A").toUpperCase(); // "A" | "B"
 
   // ------- Posting target (optional) -------
-  const POST_RESULTS_URL = ""; // paste Apps Script /exec here if logging to Google Sheets
+  const POST_RESULTS_URL = "https://script.google.com/macros/s/AKfycbw8F8jW48N1Se7pXFK-HRnQYo2tU97U8peG3CzpeWI5Htmt4yqSiesuSe_2aJ5czhvg/exec"; // paste Apps Script /exec here if logging to Google Sheets
 
   // ------- Base behavior flags by version -------
   const BASE = (STATE==="B")
@@ -386,3 +386,4 @@
 </script>
 </body>
 </html>
+
